# nerve

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  config.rs  main.rs  notify.rs  updater.rs
src/detect/: claude.rs  mod.rs  process.rs
src/platform/: ghostty.rs  mod.rs  tmux.rs
src/state/: mod.rs  prefs.rs  registry.rs  session.rs
src/tui/: cards.rs  confirm_kill.rs  confirm_preview.rs  help.rs  mod.rs  preview.rs  rename.rs  theme.rs
