[package]
name = "nerve-tui"
version = "0.2.2"
edition = "2021"
rust-version = "1.75"
description = "TUI for monitoring AI coding sessions across terminal tabs"
license = "MIT"
repository = "https://github.com/SaravananSai07/nerve"
authors = ["Sai Saravanan"]
readme = "README.md"
keywords = ["tui", "claude", "ai", "terminal", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
anyhow = "1.0.102"
